# TariffMill

./: .gitignore  BATCH_PROCESSING_PLAN.md  DerivativeMill.spec  INDEX.md  LICENSE  OCR_TEMPLATE_CREATION_SUMMARY.md  OCR_TEMPLATE_DESIGN.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP.md  TESTING_CHECKLIST.md  WINDOWS_BUILD_INSTRUCTIONS.md  build_macos.sh  derivativemill.py  doccleaver.py  install_tariffmill.sh  pyproject.toml  requirements.txt  run.sh  setup.py  tariffmill_setup.iss  test_actions_table.py  test_button_visibility.py  update_tariffmill.sh
DerivativeMill/: .gitignore  .xlsx  DerivativeMill.spec  README.md  Section_232_Actions.csv  Section_232_Tariffs_Compiled.csv  Section_232_Tariffs_Compiled.xlsx  add_copper_tariffs.py  add_wood_tariffs.py  anthropic.py  aromate_invoice_extracted.csv  build_production.ps1  create_icon.py  create_ocr_template.py  create_watermill_icon.py  database.py  debug_pdf.py  derivativemill.db  derivativemill.py  extract_aromate_invoice.py  migrate_db.py  parse_mhdv.py  parse_sec232.py  parse_updated_lists.py  platform_utils.py  process_banner_bg.py  shipment_mapping.json  test_export_speed.py  test_ocr.py  update_banner_logo.py  version.py
DerivativeMill_Win11_Install/: BUILD_INSTRUCTIONS.md  README.md
Tariffmill/: TariffMill.spec  TariffMill_macOS.spec  ai_template_generator.py  auto_template_builder.py  auto_template_generator_dialog.py  installer.iss  ocrmill_processor.py  tariffmill.py  template_builder.py  template_generator.py  version.py  visual_template_builder.py
_Archive/: AROMATE_EXTRACTION_EXPLAINED.md  DerivativeMill_old.spec  NEXT_STEPS.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_QUICK_START.md  OCR_TEMPLATE_SETUP_GUIDE.md  PDF_EXTRACTION_GUIDE.md  PDF_IMPLEMENTATION_SUMMARY.md  PDF_IMPORT_DESIGN.md  (+6 more)
(+78 files in other folders)
